--- a/session.html
+++ b/session.html
@@ -13,7 +13,7 @@
   <body>
     <div>
       
-      <article>
+      <header>
         <div class="bracket">
   <hgroup class="logotype">
     <h1>conferenceWithDevelopers</h1>
@@ -21,8 +21,12 @@
   </hgroup>
 </div>
 
-<p>2012/12/2X 公式サイトをオープンしました。</p>
+      </header>
+      
+      <article>
+        <h1 id='session'>Session</h1>
 
+<p>現在調整中です。 決定次第順次公開していきます。</p>
       </article>
       <div class="style line x2">
       </div>
