--- a/access.html
+++ b/access.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8" />
     <link href="./stylesheets/screen.css" media="screen, projection" rel="stylesheet" type="text/css" />
     <link href="./stylesheets/print.css" media="print" rel="stylesheet" type="text/css" />
+    <meta name="viewport" content="initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no">
     <!--[if IE]>
       <link href="/stylesheets/ie.css" media="screen, projection" rel="stylesheet" type="text/css" />
     <![endif]-->
@@ -25,8 +26,8 @@
       
       <article>
         <h1 id='id1'>会場へのアクセス</h1>
-<iframe scrolling='no' marginheight='0' marginwidth='0' width='640' src='https://maps.google.com/maps?f=q&amp;source=s_q&amp;hl=ja&amp;geocode=&amp;q=%E5%85%AD%E6%9C%AC%E6%9C%A8%E3%83%92%E3%83%AB%E3%82%BA%E6%A3%AE%E3%82%BF%E3%83%AF%E3%83%BC&amp;aq=&amp;sll=35.662317,139.727082&amp;sspn=0.035077,0.055919&amp;ie=UTF8&amp;hq=%E5%85%AD%E6%9C%AC%E6%9C%A8%E3%83%92%E3%83%AB%E3%82%BA%E6%A3%AE%E3%82%BF%E3%83%AF%E3%83%BC&amp;hnear=&amp;radius=15000&amp;ll=35.660482,139.729614&amp;spn=0.071946,0.071946&amp;t=m&amp;output=embed' height='420' frameborder='0'>
-</iframe><br /><small><a style='color:#0000FF;text-align:left' href='https://maps.google.com/maps?f=q&amp;source=embed&amp;hl=ja&amp;geocode=&amp;q=%E5%85%AD%E6%9C%AC%E6%9C%A8%E3%83%92%E3%83%AB%E3%82%BA%E6%A3%AE%E3%82%BF%E3%83%AF%E3%83%BC&amp;aq=&amp;sll=35.662317,139.727082&amp;sspn=0.035077,0.055919&amp;ie=UTF8&amp;hq=%E5%85%AD%E6%9C%AC%E6%9C%A8%E3%83%92%E3%83%AB%E3%82%BA%E6%A3%AE%E3%82%BF%E3%83%AF%E3%83%BC&amp;hnear=&amp;radius=15000&amp;ll=35.660482,139.729614&amp;spn=0.071946,0.071946&amp;t=m'>大きな地図で見る</a></small>
+<iframe marginheight='0' frameborder='0' marginwidth='0' width='640' height='420' scrolling='no' src='https://maps.google.com/maps?f=q&amp;source=s_q&amp;hl=ja&amp;geocode=&amp;q=%E5%85%AD%E6%9C%AC%E6%9C%A8%E3%83%92%E3%83%AB%E3%82%BA%E6%A3%AE%E3%82%BF%E3%83%AF%E3%83%BC&amp;aq=&amp;sll=35.662317,139.727082&amp;sspn=0.035077,0.055919&amp;ie=UTF8&amp;hq=%E5%85%AD%E6%9C%AC%E6%9C%A8%E3%83%92%E3%83%AB%E3%82%BA%E6%A3%AE%E3%82%BF%E3%83%AF%E3%83%BC&amp;hnear=&amp;radius=15000&amp;ll=35.660482,139.729614&amp;spn=0.071946,0.071946&amp;t=m&amp;output=embed'>
+</iframe><br /><small><a href='https://maps.google.com/maps?f=q&amp;source=embed&amp;hl=ja&amp;geocode=&amp;q=%E5%85%AD%E6%9C%AC%E6%9C%A8%E3%83%92%E3%83%AB%E3%82%BA%E6%A3%AE%E3%82%BF%E3%83%AF%E3%83%BC&amp;aq=&amp;sll=35.662317,139.727082&amp;sspn=0.035077,0.055919&amp;ie=UTF8&amp;hq=%E5%85%AD%E6%9C%AC%E6%9C%A8%E3%83%92%E3%83%AB%E3%82%BA%E6%A3%AE%E3%82%BF%E3%83%AF%E3%83%BC&amp;hnear=&amp;radius=15000&amp;ll=35.660482,139.729614&amp;spn=0.071946,0.071946&amp;t=m' style='color:#0000FF;text-align:left'>大きな地図で見る</a></small>
 <p><strong>グリー株式会社 14F</strong><br /> 東京都港区六本木6-10-1 六本木ヒルズ森タワー</p>
 
 <p>東京メトロ日比谷線 六本木駅コンコースにて直結<br /> 都営大江戸線 六本木駅出口3 徒歩6分<br /> 都営大江戸線 麻布十番駅出口7<br /> 徒歩8分東京メトロ南北線<br /> 麻布十番駅出口4 徒歩11分</p>
