--- a/access.html
+++ b/access.html
@@ -26,11 +26,11 @@
       
       <article>
         <h1 id='id1'>会場へのアクセス</h1>
-<iframe frameborder='0' marginwidth='0' width='640' marginheight='0' height='420' src='https://maps.google.com/maps?f=q&amp;source=s_q&amp;hl=ja&amp;geocode=&amp;q=%E5%85%AD%E6%9C%AC%E6%9C%A8%E3%83%92%E3%83%AB%E3%82%BA%E6%A3%AE%E3%82%BF%E3%83%AF%E3%83%BC&amp;aq=&amp;sll=35.662317,139.727082&amp;sspn=0.035077,0.055919&amp;ie=UTF8&amp;hq=%E5%85%AD%E6%9C%AC%E6%9C%A8%E3%83%92%E3%83%AB%E3%82%BA%E6%A3%AE%E3%82%BF%E3%83%AF%E3%83%BC&amp;hnear=&amp;radius=15000&amp;ll=35.660482,139.729614&amp;spn=0.071946,0.071946&amp;t=m&amp;output=embed' scrolling='no'>
+<iframe frameborder='0' height='420' marginheight='0' marginwidth='0' scrolling='no' src='https://maps.google.com/maps?f=q&amp;source=s_q&amp;hl=ja&amp;geocode=&amp;q=%E5%85%AD%E6%9C%AC%E6%9C%A8%E3%83%92%E3%83%AB%E3%82%BA%E6%A3%AE%E3%82%BF%E3%83%AF%E3%83%BC&amp;aq=&amp;sll=35.662317,139.727082&amp;sspn=0.035077,0.055919&amp;ie=UTF8&amp;hq=%E5%85%AD%E6%9C%AC%E6%9C%A8%E3%83%92%E3%83%AB%E3%82%BA%E6%A3%AE%E3%82%BF%E3%83%AF%E3%83%BC&amp;hnear=&amp;radius=15000&amp;ll=35.660482,139.729614&amp;spn=0.071946,0.071946&amp;t=m&amp;output=embed' width='640'>
 </iframe><br /><small><a href='https://maps.google.com/maps?f=q&amp;source=embed&amp;hl=ja&amp;geocode=&amp;q=%E5%85%AD%E6%9C%AC%E6%9C%A8%E3%83%92%E3%83%AB%E3%82%BA%E6%A3%AE%E3%82%BF%E3%83%AF%E3%83%BC&amp;aq=&amp;sll=35.662317,139.727082&amp;sspn=0.035077,0.055919&amp;ie=UTF8&amp;hq=%E5%85%AD%E6%9C%AC%E6%9C%A8%E3%83%92%E3%83%AB%E3%82%BA%E6%A3%AE%E3%82%BF%E3%83%AF%E3%83%BC&amp;hnear=&amp;radius=15000&amp;ll=35.660482,139.729614&amp;spn=0.071946,0.071946&amp;t=m' style='color:#0000FF;text-align:left'>大きな地図で見る</a></small>
 <p><strong>グリー株式会社 14F</strong><br /> 東京都港区六本木6-10-1 六本木ヒルズ森タワー</p>
 
-<p>東京メトロ日比谷線 六本木駅コンコースにて直結<br /> 都営大江戸線 六本木駅出口3 徒歩6分<br /> 都営大江戸線 麻布十番駅出口7<br /> 徒歩8分東京メトロ南北線<br /> 麻布十番駅出口4 徒歩11分</p>
+<p>東京メトロ日比谷線 六本木駅コンコースにて直結<br /> 都営大江戸線 六本木駅出口3 徒歩6分<br /> 都営大江戸線 麻布十番駅出口7徒歩8分<br /> 東京メトロ南北線 麻布十番駅出口4 徒歩11分<br /></p>
 
 <h2 id='id2'>受付・入館方法</h2>
 
