--- a/index.html
+++ b/index.html
@@ -13,7 +13,20 @@
   </head>
   <body>
     <div>
+      <header>
       
+      </header>
+      <div id="over">
+      <nav class="global">
+  <ul>
+    <li><a href="/">Home</a></li>
+    <li><a href="/session">Session</a></li>
+    <li><a href="/speakers">Speakers</a></li>
+    <li><a href="/access">Access</a></li>
+  </ul>
+</nav>
+
+      </div>
       <article>
         <div class="bracket">
   <hgroup class="logotype">
@@ -24,6 +37,48 @@
 
 <p>2012/12/2X 公式サイトをオープンしました。</p>
 
+<h1 id='conferencewithdevelopers'>conferenceWithDevelopersについて</h1>
+
+<h1 id='id5'>開催概要</h1>
+
+<dl>
+<dt>日時</dt>
+
+<dd>2013年2月23日(土) 10:00開場</dd>
+
+<dt>開場</dt>
+
+<dd><a href='http://corp.gree.net/jp/ja/'>グリー株式会社</a> <br /> 東京都港区六本木6-10-1 六本木ヒルズ森タワー</dd>
+
+<dt>ハッシュタグ</dt>
+
+<dd>confwd</dd>
+
+<dt>無線LAN</dt>
+
+<dd>無料のWiFiアクセスポイントを用意します。</dd>
+
+<dt>参加費</dt>
+
+<dd>無料</dd>
+</dl>
+
+<h1 id='id6'>チケットの購入について</h1>
+
+<p>conferenceWithDevelopersでは、チケットの発行に<a href='http://peatix.com/'>PeaTiX</a>を利用させて頂いております。 チケットには2つの種類がございます。料金はともに無料です。</p>
+
+<dl>
+<dt>通常チケット</dt>
+
+<dd>通常の入場券となります。懇親会とのチケットの区別はなく、１枚で最後までお楽しみいただけます。</dd>
+
+<dt>LT参加チケット</dt>
+
+<dd>通常チケットに加え、LTへの参加が可能となるチケットです。LTを参加を希望される方はこちらをご購入ください。</dd>
+</dl>
+<a class='peatix' href='http://peatix.com/event/9727'>&gt; チケットを申し込む</a>
+<p>　</p>
+
       </article>
       <div class="style line x2">
       </div>
@@ -32,8 +87,8 @@
       <div class="style line x1">
       </div>
     </div>
-    <footer>
-      <nav>
+    <footer class="dark">
+      <nav class="global">
   <ul>
     <li><a href="/">Home</a></li>
     <li><a href="/session">Session</a></li>
