--- a/index.html
+++ b/index.html
@@ -35,11 +35,19 @@
   </hgroup>
 </div>
 
-<p>2012/12/2X 公式サイトをオープンしました。</p>
-
 <h1 id='conferencewithdevelopers'>conferenceWithDevelopersについて</h1>
 
-<h1 id='id5'>開催概要</h1>
+<p>conferenceWithDevelopersはiOSに携わる、すべての開発者に向けたカンファレンスイベントです。 登壇者による技術トークとエンジニアの交流をメインの目的としています。</p>
+
+<h2 id='id5'>セッションの公募について</h2>
+
+<p>conferenceWithDevelopersでは、スピーカーを募集しています。 話たい！伝えたいことがある！という方は下記のメールまでお気軽にご連絡ください。</p>
+
+<p><strong>confwd@gmail.com</strong></p>
+
+<p>(時間の目安は30分となります)<br /> (ライトニングトークへの参加希望の方は下部、「チケットについて」をご覧ください)</p>
+
+<h1 id='id6'>開催概要</h1>
 
 <dl>
 <dt>日時</dt>
@@ -63,7 +71,7 @@
 <dd>無料</dd>
 </dl>
 
-<h1 id='id6'>チケットの購入について</h1>
+<h1 id='id7'>チケットについて</h1>
 
 <p>conferenceWithDevelopersでは、チケットの発行に<a href='http://peatix.com/'>PeaTiX</a>を利用させて頂いております。 チケットには2つの種類がございます。料金はともに無料です。</p>
 
