--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
 <h1 id='conferencewithdevelopers'>conferenceWithDevelopersについて</h1>
 
-<p>conferenceWithDevelopersはiOSに携わる、すべての開発者に向けたカンファレンスイベントです。 登壇者による技術トークとエンジニアの交流をメインの目的としています。</p>
+<p>conferenceWithDevelopersはiOS開発に携わる、すべての開発者に向けたカンファレンスイベントです。 登壇者によるiOSにまつわる技術トークとエンジニアの交流をメインの目的としています。</p>
 
 <h2 id='id5'>セッションの公募について</h2>
 
