--- a/speakers.html
+++ b/speakers.html
@@ -37,6 +37,8 @@
       </div>
       <article>
         <h1 id='id9'>登壇者紹介</h1>
+
+<p>決定次第、順次更新していきます！</p>
 <section class='speaker'>
   <img src='./images/nagano.jpg' />
   <div class='profile'>
@@ -45,25 +47,31 @@
       <h4><a href='http://info.cookpad.com/'>クックパッド株式会社</a></h4>
     </hgroup>
     <p>
-      「<a href='http://www.sbcr.jp/products/4797355154.html'>iPhone Core Audioプログラミング</a>」などを執筆した、クックパッドのiOSエンジニア。<br />
-      <a href='http://www.mosa.gr.jp/'>MOSA</a>でもCore Audioの講師として活躍されています。
+      東京都在住。プログラマー。<br />
+      情報科学芸術大学院大学(IAMAS)修士課程修了(メディア表現研究科)<br />
+      iOS/Macのアプリケーション開発を専門にしています。<br />
+      特にCore Audioが専門だと思っていますが<br />
+      今は料理を楽しくする会社にいます。
     </p>
   </div>
 </section><div class='clear-fix' />
 <p>　</p>
 <section class='speaker'>
-  <img src='./images/kinoshita.jpg' />
+  <img src='./images/sugamiya.jpg' />
   <div class='profile'>
     <hgroup>
-      <h3>木下 誠</h3>
-      <h4><a href='http://hmdt.jp/'>HMDT株式会社</a></h4>
+      <h3>菅宮 佑介</h3>
+      <h4><a href='https://www.beatrobo.com/'>Beatrobo.Inc</a></h4>
     </hgroup>
     <p>
-      数多くのiOSアプリを手がける、HMDTの代表取締役。<br />
-      著書に「<a href='http://www.bnn.co.jp/books/title_index/mac/dynamic_objectivec.html'>Dynamic Objective-C</a>」、「<a href='http://www.bnn.co.jp/books/title_index/mac/ios.html'>iOS開発における パターンによるオートマティズム</a>」など。
+      Beatrobo で iOS リードエンジニアやってます。<br />
+      好きな分野は人間が実際に触る部分の UI の面倒を見ること。<br />
+      dnpp.org から素性を辿れるようにしてるので経歴見たい人は勝手にどうぞ。<br />
+      最近書いた : <a href='https://github.com/dnpp73/DPPrismViewController'>https://github.com/dnpp73/DPPrismViewController</a>
     </p>
   </div>
 </section><div class='clear-fix' />
+<p>　</p>
       </article>
       <div class="style line x2">
       </div>
