--- a/session.html
+++ b/session.html
@@ -39,6 +39,20 @@
         <h1 id='id8'>タイムテーブル</h1>
 
 <p>現在タイムテーブルを調整中です。 決定次第順次公開していきます。</p>
+<table><thead><tr><th>　　</th><th>　　</th></tr></thead><tbody><tr><td style='text-align: left;'>10:00~10:30</td><td style='text-align: left;'>開場</td>
+</tr><tr><td style='text-align: left;'>10:30~10:45</td><td style='text-align: left;'>挨拶</td>
+</tr><tr><td style='text-align: left;'>10:45~11:30</td><td style='text-align: left;'>セッションA(45m)</td>
+</tr><tr><td style='text-align: left;'>11:45~12:30</td><td style='text-align: left;'>セッションB(45m)</td>
+</tr><tr><td style='text-align: left;'>12:30~13:15</td><td style='text-align: left;'>お昼休み</td>
+</tr><tr><td style='text-align: left;'>13:15~13:45</td><td style='text-align: left;'>セッションC(30m)</td>
+</tr><tr><td style='text-align: left;'>14:00~14:30</td><td style='text-align: left;'>セッションD(30m)</td>
+</tr><tr><td style='text-align: left;'>14:45~15:15</td><td style='text-align: left;'>セッションE(30m)</td>
+</tr><tr><td style='text-align: left;'>15:15~15:45</td><td style='text-align: left;'>休憩(30m)</td>
+</tr><tr><td style='text-align: left;'>15:45~16:15</td><td style='text-align: left;'>セッションF(30m)</td>
+</tr><tr><td style='text-align: left;'>16:30~17:30</td><td style='text-align: left;'>LT大会</td>
+</tr><tr><td style='text-align: left;'>17:30~18:00</td><td style='text-align: left;'>閉幕</td>
+</tr><tr><td style='text-align: left;'>18:00~20:00</td><td style='text-align: left;'>懇親会</td>
+</tr></tbody></table>
       </article>
       <div class="style line x2">
       </div>
