--- a/speakers.html
+++ b/speakers.html
@@ -61,7 +61,7 @@
   <div class='profile'>
     <hgroup>
       <h3>菅宮 佑介</h3>
-      <h4><a href='https://www.beatrobo.com/'>Beatrobo.Inc</a></h4>
+      <h4><a href='https://www.beatrobo.com/'>Beatrobo Inc.</a></h4>
     </hgroup>
     <p>
       Beatrobo で iOS リードエンジニアやってます。<br />
