--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
       <nav class="global">
   <ul>
     <li><a href="/">Home</a></li>
-    <li><a href="/session/">Session</a></li>
-    <li><a href="/speakers/">Speakers</a></li>
-    <li><a href="/access/">Access</a></li>
+    <li><a href="/session.html">Session</a></li>
+    <li><a href="/speakers.html">Speakers</a></li>
+    <li><a href="/access.html">Access</a></li>
   </ul>
 </nav>
 
@@ -39,7 +39,7 @@
 
 <p>conferenceWithDevelopersはiOS開発に携わる、すべての開発者に向けたカンファレンスイベントです。 登壇者によるiOSにまつわる技術トークとエンジニアの交流をメインの目的としています。</p>
 
-<h2 id='id1'>セッションの公募について</h2>
+<h2 id='id5'>セッションの公募について</h2>
 
 <p>conferenceWithDevelopersでは、スピーカーを募集しています。 話たい！伝えたいことがある！という方は下記のメールまでお気軽にご連絡ください。</p>
 
@@ -47,7 +47,7 @@
 
 <p>(時間の目安は30分となります)<br /> (ライトニングトークへの参加希望の方は下部、「チケットについて」をご覧ください)</p>
 
-<h1 id='id2'>開催概要</h1>
+<h1 id='id6'>開催概要</h1>
 
 <dl>
 <dt>日時</dt>
@@ -71,7 +71,7 @@
 <dd>無料</dd>
 </dl>
 
-<h1 id='id3'>チケットについて</h1>
+<h1 id='id7'>チケットについて</h1>
 
 <p>conferenceWithDevelopersでは、チケットの発行に<a href='http://peatix.com/'>PeaTiX</a>を利用させて頂いております。 チケットには2つの種類がございます。料金はともに無料です。</p>
 
@@ -99,9 +99,9 @@
       <nav class="global">
   <ul>
     <li><a href="/">Home</a></li>
-    <li><a href="/session/">Session</a></li>
-    <li><a href="/speakers/">Speakers</a></li>
-    <li><a href="/access/">Access</a></li>
+    <li><a href="/session.html">Session</a></li>
+    <li><a href="/speakers.html">Speakers</a></li>
+    <li><a href="/access.html">Access</a></li>
   </ul>
 </nav>
 
