よろしくお願いします！！！

--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
       <nav class="global">
   <ul>
     <li><a href="/">Home</a></li>
-    <li><a href="/session">Session</a></li>
-    <li><a href="/speakers">Speakers</a></li>
-    <li><a href="/access">Access</a></li>
+    <li><a href="/session.html">Session</a></li>
+    <li><a href="/speakers.html">Speakers</a></li>
+    <li><a href="/access.html">Access</a></li>
   </ul>
 </nav>
 
@@ -99,9 +99,9 @@
       <nav class="global">
   <ul>
     <li><a href="/">Home</a></li>
-    <li><a href="/session">Session</a></li>
-    <li><a href="/speakers">Speakers</a></li>
-    <li><a href="/access">Access</a></li>
+    <li><a href="/session.html">Session</a></li>
+    <li><a href="/speakers.html">Speakers</a></li>
+    <li><a href="/access.html">Access</a></li>
   </ul>
 </nav>
 
