--- a/access.html
+++ b/access.html
@@ -45,7 +45,7 @@
 
 <h2 id='id2'>受付・入館方法</h2>
 
-<p>入館受付時間は10:00~10:30です。<br /> 六本木ヒルズ森タワーのLL階エントランス横に臨時の受付を用意しています。<br /> 受付でお名前を伝え頂き、入館用シールをお受け取りください。(受付方法まだ未定)<br /> エスカレーターでUL階に移動し、入館ゲートの警備員にシールを提示すると入館できます。<br /> エレベーターで14Fへお越しください。</p>
+<p>入館受付時間は10:00~10:30です。<br /> 六本木ヒルズ森タワーのLL階エントランス横に臨時の受付を用意しています。<br /> 受付でお名前を伝え頂き、入館用シールをお受け取りください。<br /> エスカレーターでUL階に移動し、入館ゲートの警備員にシールを提示すると入館できます。<br /> エレベーターで14Fへお越しください。</p>
 
 <h2 id='id3'>遅刻者に関して</h2>
 
