--- a/speakers.html
+++ b/speakers.html
@@ -71,6 +71,15 @@
     </p>
   </div>
 </section><div class='clear-fix' />
+<p>　 <section class='speaker'>
+  <div class='profile'>
+    <hgroup>
+      <h3>木下 誠</h3>
+      <h4><a href='http://hmdt.jp/'>エイチエムディティ株式会社</a></h4>
+    </hgroup>
+  </div>
+</section></p>
+<div class='clear-fix' />
 <p>　</p>
       </article>
       <div class="style line x2">
