--- a/speakers.html
+++ b/speakers.html
@@ -67,7 +67,7 @@
       Beatrobo で iOS リードエンジニアやってます。<br />
       好きな分野は人間が実際に触る部分の UI の面倒を見ること。<br />
       dnpp.org から素性を辿れるようにしてるので経歴見たい人は勝手にどうぞ。<br />
-      最近書いた : <a href='https://github.com/dnpp73/DPPrismViewController'>https://github.com/dnpp73/DPPrismViewController</a>
+      最近書いた : <a href='https://github.com/dnpp73/DPPrismViewController' target='_blank'>https://github.com/dnpp73/DPPrismViewController</a>
     </p>
   </div>
 </section><div class='clear-fix' />
@@ -77,6 +77,24 @@
       <h3>木下 誠</h3>
       <h4><a href='http://hmdt.jp/'>エイチエムディティ株式会社</a></h4>
     </hgroup>
+  </div>
+</section></p>
+<div class='clear-fix' />
+<p>　 <section class='speaker'>
+  <img src='./images/oda.jpg' />
+  <div class='profile'>
+    <hgroup>
+      <h3>小田 恭央</h3>
+      <h4><a href='http://www.zunko.jp/con_aboutus.html'>SSS LLC.</a></h4>
+    </hgroup>
+    <p>
+    SSS LLC. CEO<br />
+    ちょっとならスマフォアプリの開発もできるコンサルタント。<br />
+    20代のころはとある企業システムのアプリケーションフレームワークを作ったことも。苦手な分野はデザイン。<br />
+    現在はアプリ単体ではなく、アプリ＋外部装置の組み合わせをいろいろと模索中。<br />
+    今回はiPadでホログラムみたいな映像を作る装置『ハコあに』を紹介します。<br />
+    <a href='http://hakoani.jp' target='_blank'>http://hakoani.jp</a><br />
+    </p>
   </div>
 </section></p>
 <div class='clear-fix' />
