--- a/speakers.html
+++ b/speakers.html
@@ -99,6 +99,8 @@
 </section></p>
 <div class='clear-fix' />
 <p>　</p>
+        <a href="https://twitter.com/share" class="twitter-share-button" data-url="http://conference-with-developers.info/" data-text="conferenceWithDevelopers" data-lang="ja" data-size="large" data-hashtags="confwd">ツイート</a>
+        <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
       </article>
       <div class="style line x2">
       </div>
