--- a/speakers.html
+++ b/speakers.html
@@ -72,7 +72,7 @@
   </div>
 </section><div class='clear-fix' />
 <p>　 <section class='speaker'>
-  <div class='profile'>
+  <div class='profile dummy'>
     <hgroup>
       <h3>木下 誠</h3>
       <h4><a href='http://hmdt.jp/'>エイチエムディティ株式会社</a></h4>
