--- a/speakers.html
+++ b/speakers.html
@@ -72,11 +72,16 @@
   </div>
 </section><div class='clear-fix' />
 <p>　 <section class='speaker'>
-  <div class='profile dummy'>
+  <img src='./images/kinoshita.jpg' />
+  <div class='profile'>
     <hgroup>
       <h3>木下 誠</h3>
-      <h4><a href='http://hmdt.jp/'>エイチエムディティ株式会社</a></h4>
+      <h4><a href='http://hmdt.jp/'>HMDT株式会社</a></h4>
     </hgroup>
+    <p>
+      数多くのiOSアプリを手がける、HMDTの代表取締役。<br />
+      著書に「<a href='http://www.bnn.co.jp/books/title_index/mac/dynamic_objectivec.html'>Dynamic Objective-C</a>」、「<a href='http://www.bnn.co.jp/books/title_index/mac/ios.html'>iOS開発における パターンによるオートマティズム</a>」など。
+    </p>
   </div>
 </section></p>
 <div class='clear-fix' />
