--- a/speakers.html
+++ b/speakers.html
@@ -104,6 +104,23 @@
 </section></p>
 <div class='clear-fix' />
 <p>　</p>
+<section class='speaker'>
+  <img src='./images/takeda.jpg' />
+  <div class='profile'>
+    <hgroup>
+      <h3>武田 祐一</h3>
+      <h4><a href='http://mixi.co.jp'>株式会社ミクシィ</a></h4>
+    </hgroup>
+    <p>
+      株式会社ミクシィのエンジニアです。<br />
+      大阪大学大学院　基礎工学研究科　博士前期課程修了<br />
+      学生時代は、画像処理を専門に研究していました。<br />
+      2012年に入社し、今はiOSの開発を行っています。<br />
+      今回は、弊社での開発体制や環境についてお話したいと思います。<br />
+    </p>
+  </div>
+</section><div class='clear-fix' />
+<p>　</p>
         <a href="https://twitter.com/share" class="twitter-share-button" data-url="http://conference-with-developers.info/" data-text="conferenceWithDevelopers" data-lang="ja" data-size="large" data-hashtags="confwd">ツイート</a>
         <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
         <div class="fb-like" data-href="http://conference-with-developers.info/" data-send="true" data-layout="button_count" data-width="480" data-show-faces="true" data-font="lucida grande"></div>
