--- a/session.html
+++ b/session.html
@@ -38,20 +38,19 @@
       <article>
         <h1 id='id7'>タイムテーブル</h1>
 
-<p>現在タイムテーブルを調整中です。 決定次第順次公開していきます。</p>
-<table><thead><tr><th>　　</th><th>　　</th></tr></thead><tbody><tr><td style='text-align: left;'>10:00~10:30</td><td style='text-align: left;'>開場</td>
+<p>決定次第順次公開していきます。</p>
+<table><thead><tr><th>　　</th><th>　</th></tr></thead><tbody><tr><td style='text-align: left;'>10:00~10:30</td><td style='text-align: left;'>開場</td>
 </tr><tr><td style='text-align: left;'>10:30~10:45</td><td style='text-align: left;'>挨拶</td>
-</tr><tr><td style='text-align: left;'>10:45~11:30</td><td style='text-align: left;'>セッションA(45m)</td>
-</tr><tr><td style='text-align: left;'>11:45~12:30</td><td style='text-align: left;'>セッションB(45m)</td>
-</tr><tr><td style='text-align: left;'>12:30~13:15</td><td style='text-align: left;'>お昼休み</td>
-</tr><tr><td style='text-align: left;'>13:15~13:45</td><td style='text-align: left;'>セッションC(30m)</td>
-</tr><tr><td style='text-align: left;'>14:00~14:30</td><td style='text-align: left;'>セッションD(30m)</td>
-</tr><tr><td style='text-align: left;'>14:45~15:15</td><td style='text-align: left;'>セッションE(30m)</td>
-</tr><tr><td style='text-align: left;'>15:15~15:45</td><td style='text-align: left;'>休憩(30m)</td>
-</tr><tr><td style='text-align: left;'>15:45~16:15</td><td style='text-align: left;'>セッションF(30m)</td>
-</tr><tr><td style='text-align: left;'>16:30~17:30</td><td style='text-align: left;'>LT大会</td>
-</tr><tr><td style='text-align: left;'>17:30~18:00</td><td style='text-align: left;'>閉幕</td>
-</tr><tr><td style='text-align: left;'>18:00~20:00</td><td style='text-align: left;'>懇親会</td>
+</tr><tr><td style='text-align: left;'>10:45~11:30</td><td style='text-align: left;'>木下 誠 (45m)</td>
+</tr><tr><td style='text-align: left;'>11:45~12:15</td><td style='text-align: left;'>小田 恭央 「iPadで立体映像を表示する【ハコあに】 」(30m)</td>
+</tr><tr><td style='text-align: left;'>12:15~13:15</td><td style='text-align: left;'>お昼休み</td>
+</tr><tr><td style='text-align: left;'>13:15~14:00</td><td style='text-align: left;'>永野 哲久 「けっこーすごいよ、Audio Unit」(45m)</td>
+</tr><tr><td style='text-align: left;'>14:15~14:45</td><td style='text-align: left;'>武田 祐一(30m)</td>
+</tr><tr><td style='text-align: left;'>15:00~15:30</td><td style='text-align: left;'>小野 将司 「リアルタイムチャットSDKのできるまで ～ダンゴルのチャットを支える技術～」(30m)</td>
+</tr><tr><td style='text-align: left;'>15:45~16:15</td><td style='text-align: left;'>菅宮 佑介(30m)</td>
+</tr><tr><td style='text-align: left;'>16:30~17:30</td><td style='text-align: left;'>LT 1部(5m * 8)</td>
+</tr><tr><td style='text-align: left;'>17:45~18:00</td><td style='text-align: left;'>閉幕 懇親会開始</td>
+</tr><tr><td style='text-align: left;'>18:00~20:00</td><td style='text-align: left;'>懇親会 + LT 2部(5m * n)</td>
 </tr></tbody></table>
         <a href="https://twitter.com/share" class="twitter-share-button" data-url="http://conference-with-developers.info/" data-text="conferenceWithDevelopers" data-lang="ja" data-size="large" data-hashtags="confwd">ツイート</a>
         <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
