--- a/speakers.html
+++ b/speakers.html
@@ -44,7 +44,7 @@
   <div class='profile'>
     <hgroup>
       <h3>永野 哲久</h3>
-      <h4><a href='http://info.cookpad.com/'>クックパッド株式会社</a></h4>
+      <h4><a href='http://info.cookpad.com/' target='_blank'>クックパッド株式会社</a></h4>
     </hgroup>
     <p>
       東京都在住。プログラマー。<br />
@@ -61,7 +61,7 @@
   <div class='profile'>
     <hgroup>
       <h3>菅宮 佑介</h3>
-      <h4><a href='https://www.beatrobo.com/'>Beatrobo Inc.</a></h4>
+      <h4><a href='https://www.beatrobo.com/' target='_blank'>Beatrobo Inc.</a></h4>
     </hgroup>
     <p>
       Beatrobo で iOS リードエンジニアやってます。<br />
@@ -76,7 +76,7 @@
   <div class='profile'>
     <hgroup>
       <h3>木下 誠</h3>
-      <h4><a href='http://hmdt.jp/'>HMDT株式会社</a></h4>
+      <h4><a href='http://hmdt.jp/' target='_blank'>HMDT株式会社</a></h4>
     </hgroup>
     <p>
       数多くのiOSアプリを手がける、HMDTの代表取締役。<br />
@@ -90,7 +90,7 @@
   <div class='profile'>
     <hgroup>
       <h3>小田 恭央</h3>
-      <h4><a href='http://www.zunko.jp/con_aboutus.html'>SSS LLC.</a></h4>
+      <h4><a href='http://www.zunko.jp/con_aboutus.html' target='_blank'>SSS LLC.</a></h4>
     </hgroup>
     <p>
     SSS LLC. CEO<br />
@@ -109,7 +109,7 @@
   <div class='profile'>
     <hgroup>
       <h3>武田 祐一</h3>
-      <h4><a href='http://mixi.co.jp'>株式会社ミクシィ</a></h4>
+      <h4><a href='http://mixi.co.jp' target='_blank'>株式会社ミクシィ</a></h4>
     </hgroup>
     <p>
       株式会社ミクシィのエンジニアです。<br />
@@ -117,6 +117,20 @@
       学生時代は、画像処理を専門に研究していました。<br />
       2012年に入社し、今はiOSの開発を行っています。<br />
       今回は、弊社での開発体制や環境についてお話したいと思います。<br />
+    </p>
+  </div>
+</section><div class='clear-fix' />
+<p>　</p>
+<section class='speaker'>
+  <img src='./images/ono.jpg' />
+  <div class='profile'>
+    <hgroup>
+      <h3>小野 将司</h3>
+      <h4><a href='http://www.appbankgames.net/' target='_blank'>AppBankGames Inc.</a></h4>
+    </hgroup>
+    <p>
+      iOSプログラマ。現在はAppBankGamesというところでゲーム作ってます。
+      <a href='http://akisute.com' target='_blank'>http://akisute.com</a>
     </p>
   </div>
 </section><div class='clear-fix' />
