--- a/session.html
+++ b/session.html
@@ -41,12 +41,12 @@
 <p>決定次第順次公開していきます。</p>
 <table><thead><tr><th>　　</th><th>　</th></tr></thead><tbody><tr><td style='text-align: left;'>10:00~10:30</td><td style='text-align: left;'>開場</td>
 </tr><tr><td style='text-align: left;'>10:30~10:45</td><td style='text-align: left;'>挨拶</td>
-</tr><tr><td style='text-align: left;'>10:45~11:30</td><td style='text-align: left;'>木下 誠 (45m)</td>
-</tr><tr><td style='text-align: left;'>11:45~12:15</td><td style='text-align: left;'>小田 恭央 「iPadで立体映像を表示する【ハコあに】 」(30m)</td>
+</tr><tr><td style='text-align: left;'>10:45~11:30</td><td style='text-align: left;'>木下 誠 <strong>『Dynamic Objective-C 2013』</strong> (45m)</td>
+</tr><tr><td style='text-align: left;'>11:45~12:15</td><td style='text-align: left;'>小田 恭央 <strong>『iPadで立体映像を表示する【ハコあに】 』</strong> (30m)</td>
 </tr><tr><td style='text-align: left;'>12:15~13:15</td><td style='text-align: left;'>お昼休み</td>
-</tr><tr><td style='text-align: left;'>13:15~14:00</td><td style='text-align: left;'>永野 哲久 「けっこーすごいよ、Audio Unit」(45m)</td>
+</tr><tr><td style='text-align: left;'>13:15~14:00</td><td style='text-align: left;'>永野 哲久 <strong>『けっこーすごいよ、Audio Unit』</strong> (45m)</td>
 </tr><tr><td style='text-align: left;'>14:15~14:45</td><td style='text-align: left;'>武田 祐一(30m)</td>
-</tr><tr><td style='text-align: left;'>15:00~15:30</td><td style='text-align: left;'>小野 将司 「リアルタイムチャットSDKのできるまで ～ダンゴルのチャットを支える技術～」(30m)</td>
+</tr><tr><td style='text-align: left;'>15:00~15:30</td><td style='text-align: left;'>小野 将司 <strong>『リアルタイムチャットSDKのできるまで ～ダンゴルのチャットを支える技術～』</strong> (30m)</td>
 </tr><tr><td style='text-align: left;'>15:45~16:15</td><td style='text-align: left;'>菅宮 佑介(30m)</td>
 </tr><tr><td style='text-align: left;'>16:30~17:30</td><td style='text-align: left;'>LT 1部(5m * 8)</td>
 </tr><tr><td style='text-align: left;'>17:45~18:00</td><td style='text-align: left;'>閉幕 懇親会開始</td>
