--- a/speakers.html
+++ b/speakers.html
@@ -133,6 +133,31 @@
   </div>
 </section><div class='clear-fix' />
 <p>　</p>
+
+<h1 id='id9'>ライトニングトーク参加者紹介</h1>
+
+<p>※ 当日の順番ではありません</p>
+<ul>
+<li>Jun Chen</li>
+<li>Junpei Kawasaki</li>
+<li>Kaishi Okuno</li>
+<li>Kenji Maruyama</li>
+<li>Koji Hasegawa</li>
+<li>Masashi Tateno</li>
+<li>Nozomu Matsui</li>
+<li>SAKAI Takuo</li>
+<li>Satoshi Asano</li>
+<li>Toshihide Iiduka</li>
+<li>Yosiya Hinosawa</li>
+<li>Yuichi Yoshida</li>
+<li>Yuichiro Masui</li>
+<li>佐藤慎</li>
+<li>小屋敷圭史</li>
+<li>木村</li>
+<li>松木秀憲</li>
+<li>田中勇</li>
+</ul>
+<p>　</p>
         <a href="https://twitter.com/share" class="twitter-share-button" data-url="http://conference-with-developers.info/" data-text="conferenceWithDevelopers" data-lang="ja" data-size="large" data-hashtags="confwd">ツイート</a>
         <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
         <div class="fb-like" data-href="http://conference-with-developers.info/" data-send="true" data-layout="button_count" data-width="480" data-show-faces="true" data-font="lucida grande"></div>
