--- a/session.html
+++ b/session.html
@@ -45,7 +45,7 @@
 </tr><tr><td style='text-align: left;'>11:45~12:15</td><td style='text-align: left;'>小田 恭央 <strong>『iPadで立体映像を表示する【ハコあに】 』</strong> (30m)</td>
 </tr><tr><td style='text-align: left;'>12:15~13:15</td><td style='text-align: left;'>お昼休み</td>
 </tr><tr><td style='text-align: left;'>13:15~14:00</td><td style='text-align: left;'>永野 哲久 <strong>『けっこーすごいよ、Audio Unit』</strong> (45m)</td>
-</tr><tr><td style='text-align: left;'>14:15~14:45</td><td style='text-align: left;'>武田 祐一(30m)</td>
+</tr><tr><td style='text-align: left;'>14:15~14:45</td><td style='text-align: left;'>武田 祐一 <strong>『mixiにおけるiPhoneアプリ開発』</strong>(30m)</td>
 </tr><tr><td style='text-align: left;'>15:00~15:30</td><td style='text-align: left;'>小野 将司 <strong>『リアルタイムチャットSDKのできるまで ～ダンゴルのチャットを支える技術～』</strong> (30m)</td>
 </tr><tr><td style='text-align: left;'>15:45~16:15</td><td style='text-align: left;'>菅宮 佑介(30m)</td>
 </tr><tr><td style='text-align: left;'>16:30~17:30</td><td style='text-align: left;'>LT 1部(5m * 8)</td>
