--- a/speakers.html
+++ b/speakers.html
@@ -52,7 +52,8 @@
       今は料理を楽しくする会社にいます。
     </p>
   </div>
-</section><div class='clear-fix' />
+</section><div class='clear-fix'>
+</div>
 <p>　</p>
 <section class='speaker'>
   <img src='./images/sugamiya.jpg' />
@@ -68,7 +69,8 @@
       最近書いた : <a href='https://github.com/dnpp73/DPPrismViewController' target='_blank'>https://github.com/dnpp73/DPPrismViewController</a>
     </p>
   </div>
-</section><div class='clear-fix' />
+</section><div class='clear-fix'>
+</div>
 <p>　 <section class='speaker'>
   <img src='./images/kinoshita.jpg' />
   <div class='profile'>
@@ -82,7 +84,8 @@
     </p>
   </div>
 </section></p>
-<div class='clear-fix' />
+<div class='clear-fix'>
+</div>
 <p>　 <section class='speaker'>
   <img src='./images/oda.jpg' />
   <div class='profile'>
@@ -100,7 +103,8 @@
     </p>
   </div>
 </section></p>
-<div class='clear-fix' />
+<div class='clear-fix'>
+</div>
 <p>　</p>
 <section class='speaker'>
   <img src='./images/takeda.jpg' />
@@ -117,7 +121,8 @@
       今回は、弊社での開発体制や環境についてお話したいと思います。<br />
     </p>
   </div>
-</section><div class='clear-fix' />
+</section><div class='clear-fix'>
+</div>
 <p>　</p>
 <section class='speaker'>
   <img src='./images/ono.jpg' />
@@ -131,7 +136,8 @@
       <a href='http://akisute.com' target='_blank'>http://akisute.com</a>
     </p>
   </div>
-</section><div class='clear-fix' />
+</section><div class='clear-fix'>
+</div>
 <p>　</p>
 
 <h1 id='id9'>ライトニングトーク参加者紹介</h1>
