--- a/session.html
+++ b/session.html
@@ -47,7 +47,7 @@
 </tr><tr><td style='text-align: left;'>13:15~14:00</td><td style='text-align: left;'>永野 哲久 <strong>『けっこーすごいよ、Audio Unit』</strong> (45m)</td>
 </tr><tr><td style='text-align: left;'>14:15~14:45</td><td style='text-align: left;'>武田 祐一 <strong>『mixiにおけるiPhoneアプリ開発』</strong>(30m)</td>
 </tr><tr><td style='text-align: left;'>15:00~15:30</td><td style='text-align: left;'>小野 将司 <strong>『リアルタイムチャットSDKのできるまで ～ダンゴルのチャットを支える技術～』</strong> (30m)</td>
-</tr><tr><td style='text-align: left;'>15:45~16:15</td><td style='text-align: left;'>菅宮 佑介(30m)</td>
+</tr><tr><td style='text-align: left;'>15:45~16:15</td><td style='text-align: left;'>菅宮 佑介 <strong>『いかにしてユーザーを手玉に取るか　〜ユーザーの行動の三手先を読んで実装する〜』</strong> (30m)</td>
 </tr><tr><td style='text-align: left;'>16:30~17:30</td><td style='text-align: left;'>LT 1部(5m * 8)</td>
 </tr><tr><td style='text-align: left;'>17:45~18:00</td><td style='text-align: left;'>閉幕 懇親会開始</td>
 </tr><tr><td style='text-align: left;'>18:00~20:00</td><td style='text-align: left;'>懇親会 + LT 2部(5m * n)</td>
