--- a/index.html
+++ b/index.html
@@ -35,6 +35,8 @@
   </hgroup>
 </div>
 
+<p>conferenceWithDevelopersは無事終了致しました！</p>
+
 <h1 id='conferencewithdevelopers'>conferenceWithDevelopersについて</h1>
 
 <p>conferenceWithDevelopersはiOS開発に携わる、すべての開発者に向けたカンファレンスイベントです。 登壇者によるiOSにまつわる技術トークとエンジニアの交流をメインの目的としています。</p>
